--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
           cache: maven
 
       - name: Run OWASP Dependency-Check
-        run: mvn dependency-check:check -B -DnvdApiKey=${{ secrets.NVD_API_KEY }} -DfailOnError=false
+        run: mvn dependency-check:check -B -DnvdApiKey=${{ secrets.NVD_API_KEY }}
 
       - name: Upload Dependency-Check Report
         uses: actions/upload-artifact@v4
