--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,9 @@ jobs:
           cache: maven
 
       - name: Run OWASP Dependency-Check
-        run: mvn dependency-check:check -B -DnvdApiKey=${{ secrets.NVD_API_KEY }}
+        run: |
+          mvn dependency-check:check -B \
+            -DnvdDatafeedUrl=https://jeremylong.github.io/DependencyCheck/current/nvdcve-{0}.json.gz
 
       - name: Upload Dependency-Check Report
         uses: actions/upload-artifact@v4
