--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,11 +66,9 @@ jobs:
           cache: maven
 
       - name: Run OWASP Dependency-Check
-        continue-on-error: true
         run: |
           mvn dependency-check:check -B \
-            -DfailOnError=false \
-            -DnvdValidForHours=24
+            -DnvdApiKey=${{ secrets.NVD_API_KEY }}
 
       - name: Upload Dependency-Check Report
         uses: actions/upload-artifact@v4
