--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,17 +65,19 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Run OWASP Dependency-Check
-        run: |
-          mvn dependency-check:check -B \
-            -DnvdApiKey=${{ secrets.NVD_API_KEY }}
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/maven@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --severity-threshold=high --json-file-output=snyk-report.json
 
-      - name: Upload Dependency-Check Report
+      - name: Upload Snyk Report
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: dependency-check-report
-          path: target/dependency-check-report.*
+          name: snyk-report
+          path: snyk-report.json
           retention-days: 30
 
   test:
