--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,16 +39,18 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Run SpotBugs SAST
-        run: mvn compile spotbugs:check -B
+      - name: Run SpotBugs
+        run: mvn com.github.spotbugs:spotbugs-maven-plugin:check
 
-      - name: Upload SpotBugs Report
+      - name: Spotbugs site compile
+        run: mvn clean compile site
+
+      - name: Upload SpotBugs report
         uses: actions/upload-artifact@v4
-        if: always()
         with:
           name: spotbugs-report
-          path: target/spotbugsXml.xml
-          retention-days: 30
+          path: target/site/spotbugs.html
+          if-no-files-found: warn
 
   sca:
     runs-on: ubuntu-latest
